[gd_scene load_steps=6 format=3 uid="uid://dgi3axrdwp53i"]

[ext_resource type="PackedScene" uid="uid://dpe0gjlh5ydxw" path="res://ItemResources/CoreItemScenes/BaseItem.tscn" id="1_x5x3f"]
[ext_resource type="Script" path="res://ItemResources/GDScripts/Equipment.gd" id="2_nr0wd"]
[ext_resource type="Texture2D" uid="uid://c8yk6rpq7kpny" path="res://Art/Images/Character/NEVER REMOVE.png" id="3_0ks3h"]
[ext_resource type="Script" path="res://ItemResources/CoreItemScenes/EquipmentBarSprite.gd" id="4_46u88"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16a8v"]
resource_local_to_scene = true
size = Vector2(45, 45)

[node name="Equipment" instance=ExtResource("1_x5x3f")]
script = ExtResource("2_nr0wd")
equipment_properties = null
slot_shape = null

[node name="CharShape" parent="." index="0"]
shape = SubResource("RectangleShape2D_16a8v")

[node name="EquipmentBarSprite" type="Sprite2D" parent="." index="3"]
unique_name_in_owner = true
visible = false
texture = ExtResource("3_0ks3h")
script = ExtResource("4_46u88")
